--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,7 +1,12 @@
 {{- $scratch := newScratch }}
 
 {{- if not .Date.IsZero -}}
-{{- $scratch.Add "meta" (slice (printf "<span title='%s'>%s</span>" (.Date) (.Date | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
+{{- $scratch.Add "meta" (slice (printf "%s&nbsp;<span title='%s'>%s </span>" (i18n "create_date" | default "") (.Date) (.Date | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
+{{- end }}
+
+{{- if (.Param "ShowLastMod") -}}
+{{- $lastmod := .Lastmod | time.Format (default "January 2, 2006" site.Params.DateFormat) -}}
+{{- $scratch.Add "meta" (slice (printf "%s&nbsp;<span title='%s'>%s</span>" (i18n "lastmod_date" | default "") (.Lastmod) ($lastmod))) }}
 {{- end }}
 
 {{- if (.Param "ShowReadingTime") -}}
